<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp"
    android:backgroundTint="@color/gradient"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_barcode"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewitembarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/bar_qr_code_number"
            android:textColor="#ffff"
            android:textColorHint="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/item_name"
            android:textColor="@color/orange"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/viewitemname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/name"
            android:gravity="center"
            android:textColor="#ffff"
            android:textColorHint="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/item_price"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewitemprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="@string/price"
            android:textColor="#ffff"
            android:textColorHint="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/item_category"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/viewitemcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/category"
            android:textColor="#ffff"
            android:gravity="center"
            android:textColorHint="@color/gray" />

    </LinearLayout>
</androidx.cardview.widget.CardView>