<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/backgroundgradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.DeleteFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-90dp"
        android:text="@string/delete_product"
        android:textColor="@color/orange"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_to_delete"
        android:textColor="#C1F8B0B0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_barcode_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/bar_qr_code_number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#ffff"
        android:textColorHint="@color/gray" />

    <Button
        android:id="@+id/btn_scan_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:text="@string/scan_code"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gray"
        android:ems="10"
        android:text="@string/delete_item" />

    <ProgressBar
        android:id="@+id/progress_bar_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:indeterminateTint="@color/orange"
        android:visibility="invisible" />


</LinearLayout>