<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/scan_items"
            android:textColor="@color/orange"
            android:textSize="45sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="#11AA9E9E"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:ems="10"
                android:hint="@string/search_items"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textColorHint="#F7F2F2"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/image_button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/image"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_camera_alt_black_24dp"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/orange"
            android:text="@string/search"
            android:textColor="#F7F2F2" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/orange"
        android:visibility="invisible" />

    <include
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        layout="@layout/list_layout"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        tools:listitem="@layout/list_layout"/>

</LinearLayout>