<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/inventory" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allura"
            android:text="@string/ali_market"
            android:textColor="#E4863D"
            android:textSize="53sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />


        <androidx.cardview.widget.CardView
            android:id="@+id/lo_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="visible"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rg_signings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/drawable_radio_group_tab_background"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_sign_in"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:background="@drawable/drawable_units_tab_selector"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/intro_sign_in"
                        android:textColor="@drawable/drawable_units_tab_text_color_selector"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                    <RadioButton
                        android:id="@+id/rb_sign_up"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.50"
                        android:background="@drawable/drawable_units_tab_selector"
                        android:button="@null"
                        android:checked="false"
                        android:gravity="center"
                        android:text="@string/intro_sign_up"
                        android:textColor="@drawable/drawable_units_tab_text_color_selector"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                </RadioGroup>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/lo_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/emailSignIn"
                            android:layout_width="200dp"
                            android:layout_height="48dp"
                            android:autofillHints=""
                            android:background="#11000000"
                            android:drawableStart="@drawable/ic_account_user"
                            android:ems="10"
                            android:hint="@string/user_name"
                            android:inputType="textPersonName"
                            android:textColor="#fff"
                            android:textColorHint="#ffff"
                            android:textSize="16sp"
                            tools:ignore="TextFields" />

                        <EditText
                            android:id="@+id/passwordSignIn"
                            android:layout_width="200dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="22dp"
                            android:autofillHints=""
                            android:background="#11000000"
                            android:drawableStart="@drawable/ic_password"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="#fff"
                            android:textColorHint="#ffff" />

                        <Button
                            android:id="@+id/btn_signIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:backgroundTint="@color/orange"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            tools:ignore="TextContrastCheck" />

                        <TextView
                            android:id="@+id/forgot_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:minHeight="48dp"
                            android:text="@string/forgot_password"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lo_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/emailRegister"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:background="#11000000"
                            android:drawableStart="@drawable/ic_account_user"
                            android:ems="10"
                            android:hint="@string/email"
                            android:inputType="textPersonName"
                            android:minHeight="48dp"
                            android:textColor="#fff"
                            android:textColorHint="#ffff"
                            android:textSize="16sp"
                            tools:ignore="TextFields" />

                        <EditText
                            android:id="@+id/passwordRegister"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:autofillHints=""
                            android:background="#11000000"
                            android:drawableStart="@drawable/ic_password"
                            android:ems="10"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:textColor="#fff"
                            android:textColorHint="#ffff" />

                        <EditText
                            android:id="@+id/confirmPasswordRegister"
                            android:layout_width="200dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="10dp"
                            android:autofillHints=""
                            android:background="#11000000"
                            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                            android:ems="10"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:textColor="#fff"
                            android:textColorHint="#ffff" />

                        <EditText
                            android:id="@+id/departmentNameRegister"
                            android:layout_width="200dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="10dp"
                            android:autofillHints=""
                            android:background="#11000000"
                            android:drawableStart="@drawable/ic_forum_black_24dp"
                            android:ems="10"
                            android:hint="@string/department_name"
                            android:inputType="textPersonName"
                            android:textColor="#fff"
                            android:textColorHint="#ffff"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/btn_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="@color/orange"
                            android:text="@string/sign_up"
                            android:textColor="#FFFF"
                            android:textSize="20sp" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>